--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,15 +19,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <!-- Navigation Drawer Icon -->
-
-        <!-- Toolbar Title -->
         <TextView
             android:id="@+id/toolbarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:text="Guidomia"
+            android:text="@string/guidomia"
+            android:fontFamily="@font/stencil_standard"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -38,27 +36,106 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="20dp"
-            android:contentDescription="Menu Icon"
+            android:contentDescription="@string/menu_icon"
             android:src="@drawable/toolbar_menu"
             app:tint="@color/white" />
 
-
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
+    <LinearLayout
         android:id="@+id/car_image"
         android:layout_width="match_parent"
         android:layout_height="230dp"
-        android:contentDescription="Car Image"
-        android:src="@drawable/tacoma"
+        android:orientation="vertical"
+        android:contentDescription="@string/car_image"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        android:background="@drawable/tacoma"
+        android:gravity="bottom"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" >
+
+
+        <TextView
+            android:id="@+id/spiel1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="@string/tacoma_2021"
+            android:textColor="@android:color/white"
+            android:textSize="33sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/spiel2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="@string/get_yours_now"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/textFieldsBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        android:background="@drawable/rounded_corners"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/car_image">
+
+        <TextView
+            android:id="@+id/labelFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:text="Filter"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/filterMake"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/any_make"
+            android:layout_marginTop="10dp"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:background="@drawable/rounded_corners_light_gray"/>
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/filterModel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/any_model"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:background="@drawable/rounded_corners_light_gray"
+            android:layout_marginTop="14dp"/>
+
+    </LinearLayout>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/car_image" />
+        app:layout_constraintTop_toBottomOf="@+id/textFieldsBox" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
