--- a/app/src/main/res/layout/car_item_layout.xml
+++ b/app/src/main/res/layout/car_item_layout.xml
@@ -1,44 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/light_gray"
-    android:padding="20.dp">
+    android:layout_marginBottom="10dp">
 
-    <ImageView
-        android:id="@+id/car_image"
-        android:layout_width="119dp"
-        android:layout_height="67dp"
-        android:contentDescription="Car Image"
-        android:src="@drawable/alphine"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/car_make"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20.dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="@color/dark_gray"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/light_gray"
+        android:padding="20.dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/car_image"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Alpine roadster" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/car_price"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/dark_gray"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/car_make"
-        app:layout_constraintStart_toStartOf="@+id/car_make"
-        app:layout_constraintTop_toBottomOf="@+id/car_make"
-        tools:text="Price 120K" />
+        <ImageView
+            android:id="@+id/car_image"
+            android:layout_width="119dp"
+            android:layout_height="67dp"
+            android:contentDescription="@string/car_image"
+            android:src="@drawable/alphine"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/car_make"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20.dp"
+            android:textColor="@color/dark_gray"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/car_image"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Alpine roadster" />
+
+        <TextView
+            android:id="@+id/car_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dark_gray"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/car_make"
+            app:layout_constraintStart_toStartOf="@+id/car_make"
+            app:layout_constraintTop_toBottomOf="@+id/car_make"
+            tools:text="Price 120K" />
+
+
+        <LinearLayout
+            android:id="@+id/detailsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/car_image">
+
+            <!-- Additional details here -->
+            <TextView
+                android:id="@+id/prosLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/dark_gray"
+                android:textStyle="bold"
+                android:text="Pros: "
+                app:layout_constraintEnd_toEndOf="@+id/car_make"
+                app:layout_constraintStart_toStartOf="@+id/car_make"
+                app:layout_constraintTop_toBottomOf="@+id/car_make"
+                tools:text="Pros: " />
+
+            <TextView
+                android:id="@+id/consLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/dark_gray"
+                android:textStyle="bold"
+                android:text="Cons: "
+                app:layout_constraintEnd_toEndOf="@+id/car_make"
+                app:layout_constraintStart_toStartOf="@+id/car_make"
+                app:layout_constraintTop_toBottomOf="@+id/car_make"
+                tools:text="Cons: " />
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/orange"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
