worked on filtering on textfields, added child recyclerview on car details

--- a/app/src/main/res/layout/car_item_layout.xml
+++ b/app/src/main/res/layout/car_item_layout.xml
@@ -57,6 +57,7 @@
             android:id="@+id/detailsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +77,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/car_make"
                 tools:text="Pros: " />
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/prosRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
             <TextView
                 android:id="@+id/consLabel"
                 android:layout_width="wrap_content"
@@ -87,6 +94,11 @@
                 app:layout_constraintStart_toStartOf="@+id/car_make"
                 app:layout_constraintTop_toBottomOf="@+id/car_make"
                 tools:text="Cons: " />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/consRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
