--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+  <group>
+    <clip-path
+        android:pathData="M0,0h512v512h-512z"/>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M20,0L492,0A20,20 0,0 1,512 20L512,492A20,20 0,0 1,492 512L20,512A20,20 0,0 1,0 492L0,20A20,20 0,0 1,20 0z"
+        android:fillColor="#ffffff"/>
+    <path
+        android:pathData="M315.77,167.62C309.52,160.06 302.35,154.6 294.28,151.21C286.21,147.82 277.88,146.13 269.28,146.13H267.72V107.46H268.11C283.73,107.46 298.32,110.06 311.86,115.27C325.4,120.48 337.51,128.29 348.19,138.71L315.77,167.62ZM148.19,254.73C148.19,232.33 150.79,212.54 156,195.35C161.21,177.9 168.37,163.19 177.48,151.21C186.6,138.97 197.54,129.34 210.3,122.3C223.06,115.27 236.86,110.85 251.7,109.02V148.09C243.89,150.17 236.6,153.68 229.83,158.63C223.32,163.58 217.46,170.48 212.25,179.34C207.3,187.93 203.4,198.48 200.53,210.98C197.67,223.21 196.1,237.8 195.84,254.73C196.1,271.65 197.67,286.5 200.53,299.26C203.4,312.02 207.3,323.08 212.25,332.46C217.46,341.58 223.32,348.87 229.83,354.33C236.6,359.8 243.89,363.58 251.7,365.66V401.21C236.86,399.39 223.06,394.96 210.3,387.93C197.54,380.64 186.6,370.87 177.48,358.63C168.37,346.39 161.21,331.68 156,314.49C150.79,297.04 148.19,277.12 148.19,254.73ZM363.03,251.6V362.93C357.04,370.48 350.27,376.73 342.72,381.68C335.43,386.37 327.61,390.27 319.28,393.4C311.21,396.52 302.74,398.74 293.89,400.04C285.3,401.34 276.7,401.99 268.11,401.99H267.72V367.62C270.84,367.62 274.62,367.49 279.05,367.23C283.73,366.7 288.42,366.05 293.11,365.27C298.06,364.23 302.61,362.93 306.78,361.37C311.21,359.8 314.46,357.59 316.55,354.73V283.63H267.72V251.6H363.03Z"
+        android:fillColor="#FC6016"
+        tools:ignore="VectorPath" />
+  </group>
 </vector>
