--- a/app/src/main/res/drawable/rounded_corners_light_gray.xml
+++ b/app/src/main/res/drawable/rounded_corners_light_gray.xml
@@ -3,6 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp"/> <!-- Adjust the radius value to your preference -->
-    <solid android:color="@color/lighter_gray"/>>
+    <solid android:color="@color/white"/>>
 
 </shape>
