--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/any_make"
             android:layout_marginTop="10dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/dark_gray"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:padding="10dp"
@@ -118,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/any_model"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/dark_gray"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:padding="10dp"
