--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,11 @@
     </style>
 
     <style name="Theme.GuidomiaX" parent="Base.Theme.GuidomiaX" />
+
+    <style name="MyRatingBarStyle" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/star_icon</item>
+        <item name="android:minHeight">15dip</item>
+        <item name="android:maxHeight">47dp</item>
+        <item name="android:padding">2dp</item>
+    </style>
 </resources>
